// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications reducer should handle DELETE_APPLICATION_SUCCESSFUL 1`] = `
Object {
  "applications": Array [
    Object {
      "ss_applicationid": "a",
    },
    Object {
      "ss_applicationid": "c",
    },
  ],
  "requestState": Object {
    "applicationsDeleteFailed": false,
    "applicationsDeleteSuccess": true,
    "error": null,
  },
}
`;

exports[`applications reducer should handle READ_APPLICATIONS_FAILURE 1`] = `
Object {
  "requestState": Object {
    "applicationsReadFailed": true,
    "applicationsReadPending": false,
    "applicationsReadSuccess": false,
    "error": undefined,
  },
}
`;

exports[`applications reducer should handle READ_APPLICATIONS_PENDING 1`] = `
Object {
  "requestState": Object {
    "applicationsReadFailed": false,
    "applicationsReadPending": true,
    "applicationsReadSuccess": false,
    "error": null,
  },
}
`;

exports[`applications reducer should handle READ_APPLICATIONS_SUCCESFUL 1`] = `
Object {
  "applications": Array [
    "dummy data",
  ],
  "requestState": Object {
    "applicationsReadFailed": false,
    "applicationsReadPending": false,
    "applicationsReadSuccess": true,
    "error": null,
  },
}
`;

exports[`applications reducer should return the initial state 1`] = `Object {}`;
